Trading works but predictions are not workable.